client/css/main.css
/* ... */
    #achievements li.unlocked:hover .achievement-sharing {display:block;}
    .achievement-sharing a {display:block;float:left;}
    
        #bubbles a {pointer-events:auto;text-decoration:none;color:#fcda5c;}

    #create-new span:hover, #cancel span:hover {cursor:pointer;color:#d83939;}
    #create-new span span {color:#b2af9b;}
    #create-new span span:hover {color:#b2af9b;}
    #playername {color:#fff;}

    #credits, #loadcharacter, #confirmation, #death, #error, #about {position:absolute;left:50%;text-align:center;font-family:'GraphicPixel', sans-serif;z-index:1000;}
    
    #playerimage {image-rendering: -moz-crisp-edges; image-rendering: -webkit-optimize-contrast;}
    
    #parchment p {font-family:'GraphicPixel';}
    
    #credits, #death, #about {top:50%;}
    .intro #credits, .intro #about {top:55%;}
    #credits h1 a {color:#fcda5c;text-decoration:none;}
    #authors div a {display:block;color:#fff;text-decoration:none;}
    #authors div a:hover, #credits h1 a:hover {color:#93C1FF;}
    #seb {clear:both;}

    #portrait {display:none;}

    #about .link a:hover {color:#d83939;}

    footer {font-family:'GraphicPixel';position:absolute;bottom:5%;left:0;text-align:center;width:100%;color:#ffffff;-moz-transition:0.2s opacity linear;-webkit-transition:0.2s opacity linear;-o-transition:0.2s opacity linear;-ms-transition:0.2s opacity linear;transition:0.2s opacity linear;}
    .upscaled.game footer {color:#ffffff;}
    .game footer {color:#ffffff;}
    
    .intro footer {opacity:1;}
    footer:hover {opacity:1;}
    footer div  {display:inline-block;}
    #sharing a {display:inline-block;float:right;background-size:844px;position:relative;top:-2px;text-decoration:none;width:32px;height:22px;margin:0 8px 0 8px;transition:transform 0.2s;text-align:center;line-height:22px;font-size:16px;font-weight:bold;color:#fff;}
    #sharing #xshare {background:none !important;border-radius:4px;padding:0 8px;font-size:18px;}
    #sharing #xshare:hover {transform:scale(1.15);}
    #sharing #tgshare {background:none !important;border-radius:4px;padding:0 8px;font-size:18px;}
    #sharing #tgshare:hover {transform:scale(1.15);}
    #sharing .facebook {display:none;}
    #sharing .twitter {display:none;}
    #sharing .gplus {height:22px;width:22px;background:url('../img/common/gplus.png');margin:0 12px 0 0px;}
    #credits-link span {display:inline-block;margin-left:12px;}
    #credits-link span:hover {color:#fcda5c;cursor:pointer;}
    
    #sharing a:hover {-moz-transform:scale(1.2);-webkit-transform:scale(1.2);-o-transform:scale(1.2);transform:scale(1.2);}
    #sharing a:active {-moz-transform:scale(1);-webkit-transform:scale(1);-o-transform:scale(1);transform:scale(1);}

    .close {position:absolute;z-index:20000;}
    .close:hover {cursor:pointer;}
    
    .ribbon {position:absolute;}
    .ribbon:hover {cursor:pointer;}
    .ribbon .top {-moz-transition:0.25s height ease;-webkit-transition:0.25s height ease;-o-transition:0.25s height ease;-ms-transition:0.25s height ease;transition:0.25s height ease;}
    
        .bubble {background:rgba(45,45,45,0.8);padding:0px 12px 0px 12px;border-radius:8px;color:rgba(255,255,255,0.8);display:inline-block;text-align:center;position:absolute;}
        .thingy {height:10px;width:11px;background:url('../img/common/thingy.png');margin:0 auto;margin-top:-10px;top:10px;position:relative;}
    
    .alert {height:50px;background:#d83939;width:100%;color:#eee;font-size:20px;font-family:'GraphicPixel', arial, sans-serif;text-align:center;line-height:50px;border-bottom:1px solid #000;}

    #instructions, #achievements, #lists, #about, #credits, .ribbon, .play, .play div, .barbutton {-webkit-tap-highlight-color:transparent;}
    #nameinput::-webkit-input-placeholder  {color:#fff;}

    #resize-check {position:absolute;height:0;top:0;left:0;-moz-transition:0.001s height ease;-webkit-transition:0.001s height ease;-o-transition:0.001s height ease;-ms-transition:0.001s height ease;transition:0.001s height ease;}

    #death p em {display:block;font-style:normal;}

/* Magic Parchment */

    .parchment-left {position:absolute;top:0;left:0%;}
    .parchment-right {position:absolute;top:0;right:0%;}
    .parchment-middle {position:absolute;left:50%;top:0;}
    .animate .parchment-left {-moz-animation:parchleft 1s ease 1;-webkit-animation:parchleft 1s ease 1;-o-animation:parchleft 1s ease 1;-ms-animation:parchleft 1s ease 1;animation:parchleft 1s ease 1;}
    .animate .parchment-right {-moz-animation:parchright 1s ease 1;-webkit-animation:parchright 1s ease 1;-o-animation:parchright 1s ease 1;-ms-animation:parchright 1s ease 1;animation:parchright 1s ease 1;}

    #credits, #createcharacter, #loadcharacter, #confirmation, #death, #error, #about {opacity:0;pointer-events:none;-moz-transition:none;-webkit-transition:none;-o-transition:none;-ms-transition:none;transition:none;}
    .credits #credits, .createcharacter #createcharacter, .loadcharacter #loadcharacter, .confirmation #confirmation, .death #death, .error #error, .about #about {opacity:1;pointer-events:auto;-moz-transition:0.5s opacity linear;-webkit-transition:0.5s opacity linear;-o-transition:0.5s opacity linear;-ms-transition:0.5s opacity linear;transition:0.5s opacity linear;}

/* States & Transitions */

    #intro {-moz-transition:0.4s opacity linear;-webkit-transition:0.4s opacity linear;-o-transition:0.4s opacity linear;-ms-transition:0.4s opacity linear;transition:0.4s opacity linear;}
    #mask, #logo, #parchment {opacity:0;}
    .intro #logo, .intro #parchment {opacity:1;}

    .game #confirmation, .game #loadcharacter, .game #createcharacter, .game #error {display:none;}
/* ... */

